--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -6,14 +6,19 @@ hyperskill_project:
 stages:
 - id: 447
   step: 7434
+  is_completed: true
 - id: 448
   step: 7435
+  is_completed: true
 - id: 449
   step: 7436
+  is_completed: true
 - id: 450
   step: 7437
+  is_completed: true
 - id: 451
   step: 7438
+  is_completed: true
 topics:
   0:
   - title: Units of information
@@ -124,27 +129,29 @@ topics:
   - title: Covariant return types
     theory_id: 3539
   4:
-  - title: Computer algorithms
-    theory_id: 4953
-  - title: The big O notation
-    theory_id: 4991
-  - title: Data structures
-    theory_id: 5161
-  - title: Recursion basics
-    theory_id: 5984
-  - title: Stack
-    theory_id: 5252
-  - title: Call stack
-    theory_id: 5135
-  - title: Recursion
-    theory_id: 3550
-  - title: Protected modifier
-    theory_id: 6692
-  - title: Referencing subclass objects
-    theory_id: 3585
-  - title: Polymorphism
-    theory_id: 3587
-  - title: Abstract class
-    theory_id: 3597
-  - title: Interface
-    theory_id: 3615
+    - title: Computer algorithms
+      theory_id: 4953
+    - title: Recursion basics
+      theory_id: 5984
+    - title: Introducing the first algorithm
+      theory_id: 10336
+    - title: The big O notation
+      theory_id: 4991
+    - title: Data structures
+      theory_id: 5161
+    - title: Stack
+      theory_id: 5252
+    - title: Call stack
+      theory_id: 5135
+    - title: Recursion
+      theory_id: 3550
+    - title: Protected modifier
+      theory_id: 6692
+    - title: Referencing subclass objects
+      theory_id: 3585
+    - title: Polymorphism
+      theory_id: 3587
+    - title: Abstract class
+      theory_id: 3597
+    - title: Interface
+      theory_id: 3615
